--- a/app/src/main/res/layout/item_tree_folder.xml
+++ b/app/src/main/res/layout/item_tree_folder.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:tools="http://schemas.android.com/tools">
+
     <data>
+
         <variable
             name="folder"
             type="com.example.project_myfit.ui.main.listfragment.database.Folder" />
@@ -43,11 +45,11 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginStart="@dimen/_8sdp"
-                android:text="@{folder.folderName}"
                 android:layout_weight="1"
                 android:ellipsize="end"
                 android:gravity="center_vertical"
                 android:maxLines="1"
+                android:text="@{folder.folderName}"
                 android:textSize="@dimen/_10sdp"
                 tools:text="폴더 1" />
 
@@ -56,12 +58,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginHorizontal="@dimen/_4sdp"
+                android:alpha="0.5"
                 android:gravity="bottom"
                 android:maxLines="1"
                 android:paddingBottom="@dimen/_8sdp"
                 android:text="@string/current_position"
                 android:textSize="@dimen/_6sdp"
                 android:visibility="gone" />
+
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/amount"
                 android:layout_width="wrap_content"
@@ -69,8 +73,8 @@
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="@dimen/_6sdp"
                 android:layout_marginVertical="@dimen/_2sdp"
-                android:text="@{folder.itemAmount}"
                 android:alpha="0.6"
+                android:text="@{folder.itemAmount}"
                 android:textSize="@dimen/_6sdp"
                 tools:text="20" />
 
