--- a/app/src/main/res/layout/item_list_recycler_folder.xml
+++ b/app/src/main/res/layout/item_list_recycler_folder.xml
@@ -16,6 +16,7 @@
         android:orientation="vertical">
 
         <com.google.android.material.card.MaterialCardView
+            android:layout_gravity="center_horizontal"
             android:id="@+id/folder_card_view"
             android:layout_width="@dimen/_64sdp"
             android:layout_height="@dimen/_64sdp"
@@ -32,7 +33,7 @@
                 android:includeFontPadding="false"
                 android:maxLines="3"
                 android:text="@{folder.folderName}"
-                android:textSize="@dimen/_10sdp"
+                android:textSize="@dimen/_9sdp"
                 tools:text="comme \n des \n garcons" />
 
             <androidx.appcompat.widget.AppCompatImageView
