--- a/app/src/main/res/layout/item_list_recycler_grid.xml
+++ b/app/src/main/res/layout/item_list_recycler_grid.xml
@@ -74,18 +74,18 @@
                         android:ellipsize="end"
                         android:maxLines="1"
                         android:text="@{size.brand}"
-                        android:textSize="@dimen/_8sdp"
+                        android:textSize="@dimen/_7sdp"
                         tools:text="앤더슨벨" />
 
                     <com.google.android.material.textview.MaterialTextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="-2dp"
                         android:alpha="0.8"
                         android:ellipsize="end"
                         android:maxLines="1"
                         android:text="@{size.name}"
                         android:textSize="@dimen/_10sdp"
-                        app:fontFamily="@font/sc_dream5"
                         tools:text="오버핏 반팔" />
                 </androidx.appcompat.widget.LinearLayoutCompat>
             </androidx.appcompat.widget.LinearLayoutCompat>
