--- a/app/src/main/res/layout/item_list_recycler_list.xml
+++ b/app/src/main/res/layout/item_list_recycler_list.xml
@@ -17,7 +17,8 @@
         <com.google.android.material.checkbox.MaterialCheckBox
             android:id="@+id/list_check_box"
             android:layout_width="@dimen/_20sdp"
-            android:layout_height="match_parent"
+            android:layout_height="@dimen/_20sdp"
+            android:layout_gravity="center_vertical"
             android:layout_marginStart="@dimen/_8sdp"
             android:alpha="0.8"
             android:buttonTint="?colorControlNormal"
@@ -42,6 +43,7 @@
                 <androidx.appcompat.widget.LinearLayoutCompat
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginVertical="@dimen/_1sdp"
                     android:layout_weight="1"
                     android:orientation="vertical"
                     android:paddingHorizontal="@dimen/_8sdp"
@@ -61,11 +63,11 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:alpha="0.8"
+                        android:layout_marginTop="-2dp"
                         android:ellipsize="end"
                         android:maxLines="1"
                         android:text="@{size.name}"
                         android:textSize="@dimen/_11sdp"
-                        app:fontFamily="@font/sc_dream5"
                         tools:text="DAMAGED CREW NECK SWEATER" />
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
