--- a/app/src/main/res/layout/action_mode_title.xml
+++ b/app/src/main/res/layout/action_mode_title.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:tools="http://schemas.android.com/tools">
-
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -24,5 +23,5 @@
             android:layout_marginStart="@dimen/_8sdp"
             android:textSize="@dimen/_12sdp"
             tools:text="1개 선택됨" />
-    </LinearLayout>
+    </androidx.appcompat.widget.LinearLayoutCompat>
 </layout>
