--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,32 +10,29 @@
 
             <com.google.android.material.appbar.AppBarLayout
                 android:layout_width="match_parent"
+                android:background="?colorPrimary"
                 android:layout_height="@dimen/_40sdp">
 
-                <FrameLayout
+                <com.google.android.material.appbar.MaterialToolbar
+                    android:id="@+id/toolbar"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <com.google.android.material.appbar.MaterialToolbar
-                        android:id="@+id/toolbar"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        app:titleTextAppearance="@style/myActionBarTitleStyle" />
+                    android:layout_height="match_parent"
+                    app:titleTextAppearance="@style/myActionBarTitleStyle">
 
                     <com.google.android.material.textview.MaterialTextView
                         android:id="@+id/toolbar_main_title"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_gravity="center"
-                        android:gravity="center_vertical"
+                        android:gravity="center"
                         android:text="@string/app_name"
                         android:textColor="?colorControlNormal"
                         android:textSize="@dimen/_26sdp"
                         app:fontFamily="@font/ballet_harmony" />
-                </FrameLayout>
+                </com.google.android.material.appbar.MaterialToolbar>
             </com.google.android.material.appbar.AppBarLayout>
 
-            <fragment
+            <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/host_fragment"
                 android:name="androidx.navigation.fragment.NavHostFragment"
                 android:layout_width="match_parent"
@@ -52,7 +49,7 @@
                 android:layout_gravity="bottom"
                 app:elevation="@dimen/_6sdp"
                 app:fabAlignmentMode="center"
-                app:fabAnimationMode="scale"
+                app:backgroundTint="?colorPrimary"
                 app:fabCradleMargin="@dimen/_6sdp" />
 
             <com.google.android.material.bottomnavigation.BottomNavigationView
