--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -19,7 +19,7 @@
                 android:layout_height="0dp" />
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/search_edit_text_layout"
+                android:id="@+id/auto_complete_text_layout"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -41,77 +41,12 @@
                     android:maxLines="1"
                     android:textSize="@dimen/_11sdp" />
             </com.google.android.material.textfield.TextInputLayout>
-
         </com.google.android.material.appbar.AppBarLayout>
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:id="@+id/view_pager_layout"
+        <androidx.fragment.app.FragmentContainerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:visibility="gone"
-            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
-
-            <com.google.android.material.tabs.TabLayout
-                android:id="@+id/tab_layout"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_32sdp"
-                android:layout_marginTop="@dimen/_8sdp"
-                android:background="@android:color/transparent"
-                app:tabIndicatorColor="?myColorControl"
-                app:tabSelectedTextColor="?myColorControl"
-                app:tabTextAppearance="@style/myTextSize9sdp" />
-
-            <androidx.viewpager2.widget.ViewPager2
-                android:id="@+id/view_pager"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-        </androidx.appcompat.widget.LinearLayoutCompat>
-
-        <FrameLayout
-            android:id="@+id/recent_search_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
-
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:id="@+id/recent_search_recycler_layout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <com.google.android.material.textview.MaterialTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_16sdp"
-                    android:layout_marginTop="@dimen/_4sdp"
-                    android:alpha="0.7"
-                    android:text="@string/recent_search"
-                    android:textSize="@dimen/_8sdp" />
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recent_search_recycler"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                    tools:listitem="@layout/item_recent_search_recycler" />
-            </androidx.appcompat.widget.LinearLayoutCompat>
-
-            <FrameLayout
-                android:id="@+id/recent_search_no_data"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="?colorPrimary">
-
-                <com.google.android.material.textview.MaterialTextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:alpha="0.7"
-                    android:gravity="center"
-                    android:text="@string/no_recent_search_list"
-                    android:textSize="@dimen/_10sdp" />
-            </FrameLayout>
-
-        </FrameLayout>
+            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+            tools:layout="@layout/fragment_search" />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
