--- a/app/src/main/res/layout/item_search_folder.xml
+++ b/app/src/main/res/layout/item_search_folder.xml
@@ -10,7 +10,7 @@
             type="com.example.project_myfit.ui.main.listfragment.database.Folder" />
     </data>
 
-    <androidx.appcompat.widget.LinearLayoutCompat
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/_12sdp"
             android:layout_marginVertical="@dimen/_2sdp"
-            app:cardBackgroundColor="?colorPrimary"
+            app:cardBackgroundColor="?myCardViewBackground"
             app:cardElevation="@dimen/_2sdp">
 
             <androidx.appcompat.widget.LinearLayoutCompat
@@ -46,6 +46,5 @@
                     tools:text="폴더당" />
             </androidx.appcompat.widget.LinearLayoutCompat>
         </com.google.android.material.card.MaterialCardView>
-
-    </androidx.appcompat.widget.LinearLayoutCompat>
+    </FrameLayout>
 </layout>
